--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongodb": "^3.5.9",
     "multer": "^1.4.2",
     "uuid": "^3.3.3"
   }
